--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -1,12 +1,12 @@
 @import '@fontsource/fira-mono';
 
 :root {
-	--font-body: Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
+	--font-body: Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Inter,
 		Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	--font-mono: 'Fira Mono', monospace;
-	--color-bg-0: rgb(202, 216, 228);
-	--color-bg-1: hsl(209, 36%, 86%);
-	--color-bg-2: hsl(224, 44%, 95%);
+	--color-bg-0: #18181A;
+	--color-bg-1: #1f2937;
+	--color-bg-2: #374151;
 	--color-theme-1: #ff3e00;
 	--color-theme-2: #4075a6;
 	--color-text: rgba(0, 0, 0, 0.7);
@@ -20,14 +20,10 @@ body {
 	min-height: 100vh;
 	margin: 0;
 	background-attachment: fixed;
-	background-color: var(--color-bg-1);
-	background-size: 100vw 100vh;
-	background-image: radial-gradient(
-			50% 50% at 50% 50%,
-			rgba(255, 255, 255, 0.75) 0%,
-			rgba(255, 255, 255, 0) 100%
-		),
-		linear-gradient(180deg, var(--color-bg-0) 0%, var(--color-bg-1) 15%, var(--color-bg-2) 50%);
+	background-color: var(--color-bg-0);
+	background-size: 100% 100%;
+	/* background-image: 
+		linear-gradient(180deg, var(--color-bg-0) 40%, var(--color-bg-1) 10%, var(--color-bg-2) 50%); */
 }
 
 h1,
@@ -73,6 +69,7 @@ pre {
 	display: flex;
 	max-width: 48rem;
 	flex: 0.6;
+	height: auto;
 	flex-direction: column;
 	justify-content: center;
 	margin: 0 auto;
